# emotiv-ros

./: README.md
emotiv_driver/: CMakeLists.txt  epoc.rules  package.xml
emotiv_driver/.scripts/: emotiv_node.py
emotiv_driver/.scripts/emokit/: decrypter.py  emotiv.py  packet.py  reader.py  util.py
emotiv_driver/include/: headset.launch
emotiv_msgs/: CMakeLists.txt  package.xml
emotiv_msgs/msg/: Data.msg  channelData.msg  channels.msg
